Fix in css to prevent label on select from going too high

--- a/frontend/app/styles/globals.scss
+++ b/frontend/app/styles/globals.scss
@@ -93,6 +93,14 @@ input {
 	}
 }
 
+.MuiFormControl-root {
+	margin-top: 0.5em;
+}
+
+.MuiInputLabel-shrink {
+	transform: translate(1px, 0px) scale(0.75);
+}
+
 .MuiFormHelperText-root {
 	color: $black;
 }
